feat: Implementation of the contact preference function